@@ -1,5 +1,11 @@
 Changes in version 1-3-1.1 (xx/xx/2015)
-    * Bugfix for combining item matrices with 0 rows (reported by C. Buchta).
+    * bugfix for combining item matrices with 0 rows (reported by C. Buchta).
+    * is.redundant: fixed, it is now based on improvement.
+    * Groceries: fixed typo in dataset.
+    * sort: speed up sort by always sorting NAs last.
+    * head: added method head for associations for getting the best rules 
+      according to an interest measure faster than sorting all the 
+      associations first.
 
 Changes in version 1-3-1 (12/13/2015)
     * we now require R 2.3.0 so cbind in Matrix works.
